--- a/.github/workflows/slack-announcements.yml
+++ b/.github/workflows/slack-announcements.yml
@@ -19,38 +19,62 @@ jobs:
             echo "is_announcement=false" >> $GITHUB_OUTPUT
           fi
           
-      - name: Post to Slack
+      - name: Prepare Slack Payload
         if: steps.check.outputs.is_announcement == 'true'
-        uses: slackapi/slack-github-action@v1
+        id: slack_prep
+        uses: actions/github-script@v7
         with:
-          payload: |
-            {
-              "blocks": [
+          script: |
+            const title = context.payload.discussion.title;
+            let body = context.payload.discussion.body;
+            const url = context.payload.discussion.html_url;
+            
+            // Convert GitHub markdown to Slack markdown
+            // Convert **text** to *text* for bold
+            body = body.replace(/\*\*([^*]+)\*\*/g, '*$1*');
+            
+            // Set outputs safely
+            core.setOutput('title', title);
+            core.setOutput('body', body);
+            core.setOutput('url', url);
+            
+            // Create the full JSON payload
+            const payload = {
+              blocks: [
                 {
-                  "type": "header",
-                  "text": {
-                    "type": "plain_text",
-                    "text": "📢 ${{ github.event.discussion.title }}",
-                    "emoji": true
+                  type: "header",
+                  text: {
+                    type: "plain_text",
+                    text: `📢 ${title}`,
+                    emoji: true
                   }
                 },
                 {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "${{ github.event.discussion.body }}"
+                  type: "section",
+                  text: {
+                    type: "mrkdwn",
+                    text: body
                   }
                 },
                 {
-                  "type": "context",
-                  "elements": [
+                  type: "context",
+                  elements: [
                     {
-                      "type": "mrkdwn",
-                      "text": "<${{ github.event.discussion.html_url }}|View Discussion>"
+                      type: "mrkdwn",
+                      text: `<${url}|View Discussion>`
                     }
                   ]
                 }
               ]
-            }
+            };
+            
+            // Output the stringified payload
+            core.setOutput('payload', JSON.stringify(payload));
+            
+      - name: Post to Slack
+        if: steps.check.outputs.is_announcement == 'true'
+        uses: slackapi/slack-github-action@v1
+        with:
+          payload: ${{ steps.slack_prep.outputs.payload }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DOGRAH_COMMUNITY_WEBHOOK_URL }}
