--- a/.github/workflows/slack-announcements.yml
+++ b/.github/workflows/slack-announcements.yml
@@ -19,62 +19,30 @@ jobs:
             echo "is_announcement=false" >> $GITHUB_OUTPUT
           fi
           
-      - name: Prepare Slack Payload
+      - name: Build Slack Message
         if: steps.check.outputs.is_announcement == 'true'
-        id: slack_prep
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const title = context.payload.discussion.title;
-            let body = context.payload.discussion.body;
-            const url = context.payload.discussion.html_url;
-            
-            // Convert GitHub markdown to Slack markdown
-            // Convert **text** to *text* for bold
-            body = body.replace(/\*\*([^*]+)\*\*/g, '*$1*');
-            
-            // Set outputs safely
-            core.setOutput('title', title);
-            core.setOutput('body', body);
-            core.setOutput('url', url);
-            
-            // Create the full JSON payload
-            const payload = {
-              blocks: [
-                {
-                  type: "header",
-                  text: {
-                    type: "plain_text",
-                    text: `📢 ${title}`,
-                    emoji: true
-                  }
-                },
-                {
-                  type: "section",
-                  text: {
-                    type: "mrkdwn",
-                    text: body
-                  }
-                },
-                {
-                  type: "context",
-                  elements: [
-                    {
-                      type: "mrkdwn",
-                      text: `<${url}|View Discussion>`
-                    }
-                  ]
-                }
-              ]
-            };
-            
-            // Output the stringified payload
-            core.setOutput('payload', JSON.stringify(payload));
-            
+        id: slack_message
+        run: |
+          # Use heredoc to safely handle the message content
+          {
+            echo 'message<<EOF'
+            echo "📢 *${{ github.event.discussion.title }}*"
+            echo ""
+            cat <<'BODY_END'
+${{ github.event.discussion.body }}
+BODY_END
+            echo ""
+            echo "<${{ github.event.discussion.html_url }}|View Discussion>"
+            echo 'EOF'
+          } | sed 's/\*\*\([^*]*\)\*\*/*\1*/g' >> $GITHUB_OUTPUT
+          
       - name: Post to Slack
         if: steps.check.outputs.is_announcement == 'true'
         uses: slackapi/slack-github-action@v1
         with:
-          payload: ${{ steps.slack_prep.outputs.payload }}
+          payload: |
+            {
+              "text": ${{ toJSON(steps.slack_message.outputs.message) }}
+            }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DOGRAH_COMMUNITY_WEBHOOK_URL }}
