--- a/.github/workflows/slack-announcements.yml
+++ b/.github/workflows/slack-announcements.yml
@@ -19,13 +19,48 @@ jobs:
             echo "is_announcement=false" >> $GITHUB_OUTPUT
           fi
           
-      - name: Post to Slack
+      - name: Prepare and Post to Slack
         if: steps.check.outputs.is_announcement == 'true'
-        uses: slackapi/slack-github-action@v1
+        uses: actions/github-script@v7
         with:
-          payload: |
-            {
-              "text": ${{ toJSON(format('📢 *{0}*\n\n{1}\n\n<{2}|View Discussion>', github.event.discussion.title, github.event.discussion.body, github.event.discussion.html_url)) }}
+          script: |
+            const title = context.payload.discussion.title;
+            let body = context.payload.discussion.body;
+            const url = context.payload.discussion.html_url;
+            const webhook = process.env.SLACK_WEBHOOK_URL;
+            
+            if (!webhook) {
+              core.setFailed('SLACK_WEBHOOK_URL is not set');
+              return;
+            }
+            
+            // Convert GitHub markdown to Slack markdown
+            body = body.replace(/\*\*([^*]+)\*\*/g, '*$1*');
+            
+            // Build message with real newlines
+            const message = `📢 *${title}*
+
+${body}
+
+<${url}|View Discussion>`;
+            
+            // Send to Slack
+            const payload = { text: message };
+            
+            try {
+              const response = await fetch(webhook, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(payload)
+              });
+              
+              if (!response.ok) {
+                core.setFailed(`Failed to send to Slack: ${response.status}`);
+              } else {
+                console.log('✅ Successfully sent announcement to Slack');
+              }
+            } catch (error) {
+              core.setFailed(`Error sending to Slack: ${error.message}`);
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DOGRAH_COMMUNITY_WEBHOOK_URL }}
