--- a/.github/workflows/slack-announcements.yml
+++ b/.github/workflows/slack-announcements.yml
@@ -11,52 +11,52 @@ jobs:
       - name: Check if announcement
         id: check
         run: |
-          if [[ "${{ github.event.discussion.category.slug }}" == "announcements" ]] || [[ "${{ github.event.discussion.category.name }}" == "Announcements" ]]; then
-            echo "✅ Announcement detected in category: ${{ github.event.discussion.category.name }}"
+          if [[ "${{ github.event.discussion.category.name }}" == "Announcements" ]]; then
+            echo "✅ Announcement detected"
             echo "is_announcement=true" >> $GITHUB_OUTPUT
           else
-            echo "⏭️ Skipping - Not an announcement (category: ${{ github.event.discussion.category.name }})"
+            echo "⏭️ Skipping - Category: ${{ github.event.discussion.category.name }}"
             echo "is_announcement=false" >> $GITHUB_OUTPUT
           fi
-          
-      - name: Prepare and Post to Slack
+
+      - name: Post to Slack
         if: steps.check.outputs.is_announcement == 'true'
         uses: actions/github-script@v7
         with:
           script: |
-            const title = context.payload.discussion.title;
-            let body = context.payload.discussion.body;
-            const url = context.payload.discussion.html_url;
-            const webhook = process.env.SLACK_WEBHOOK_URL;
+            const { discussion } = context.payload;
+            const webhook = '${{ secrets.SLACK_DOGRAH_COMMUNITY_WEBHOOK_URL }}';
             
             if (!webhook) {
-              core.setFailed('SLACK_WEBHOOK_URL is not set');
+              core.setFailed('SLACK_DOGRAH_COMMUNITY_WEBHOOK_URL secret is not configured');
               return;
             }
             
-            // Convert GitHub markdown to Slack markdown
-            body = body.replace(/\*\*([^*]+)\*\*/g, '*$1*');
+            // Convert GitHub **bold** to Slack *bold*
+            const body = discussion.body.replace(/\*\*([^*]+)\*\*/g, '*$1*');
             
-            // Build message with real newlines
-            const message = '📢 *' + title + '*\n\n' + body + '\n\n<' + url + '|View Discussion>';
+            // Build Slack message
+            const message = [
+              '📢 *' + discussion.title + '*',
+              '',
+              body,
+              '',
+              '<' + discussion.html_url + '|View Discussion>'
+            ].join('\n');
             
-            // Send to Slack
-            const payload = { text: message };
-            
+            // Send to Slack webhook
             try {
               const response = await fetch(webhook, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(payload)
+                body: JSON.stringify({ text: message })
               });
               
-              if (!response.ok) {
-                core.setFailed(`Failed to send to Slack: ${response.status}`);
+              if (response.ok) {
+                console.log('✅ Successfully posted announcement to Slack');
               } else {
-                console.log('✅ Successfully sent announcement to Slack');
+                core.setFailed(`Failed to post to Slack: ${response.status}`);
               }
             } catch (error) {
-              core.setFailed(`Error sending to Slack: ${error.message}`);
+              core.setFailed(`Error posting to Slack: ${error.message}`);
             }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DOGRAH_COMMUNITY_WEBHOOK_URL }}
